Add global config option for 'circular buffer max size MiB'

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -8,7 +8,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	circular buffer max size = 64 # in MiB
+	# circular buffer max size = 64 # in MiB
 	circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
@@ -39,7 +39,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	circular buffer max size = 64 # in MiB
+	# circular buffer max size = 64 # in MiB
 	circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
@@ -66,7 +66,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	circular buffer max size = 64 # in MiB
+	# circular buffer max size = 64 # in MiB
 	circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
@@ -103,7 +103,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	circular buffer max size = 64 # in MiB
+	# circular buffer max size = 64 # in MiB
 	circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
@@ -149,7 +149,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	circular buffer max size = 64 # in MiB
+	# circular buffer max size = 64 # in MiB
 	circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
@@ -192,7 +192,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	circular buffer max size = 64 # in MiB
+	# circular buffer max size = 64 # in MiB
 	circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
@@ -231,7 +231,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	circular buffer max size = 64 # in MiB
+	# circular buffer max size = 64 # in MiB
 	circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
@@ -276,7 +276,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	circular buffer max size = 64 # in MiB
+	# circular buffer max size = 64 # in MiB
 	circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
@@ -316,7 +316,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	circular buffer max size = 64 # in MiB
+	# circular buffer max size = 64 # in MiB
 	circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
@@ -355,7 +355,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	circular buffer max size = 64 # in MiB
+	# circular buffer max size = 64 # in MiB
 	circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
