Add global config option for 'circular buffer drop logs if full'

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -9,7 +9,7 @@
 	## Uncomment to override global equivalents.
 	# update every = 1
 	# circular buffer max size = 64 # in MiB
-	circular buffer drop logs if full = no
+	# circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
 	buffer flush to db = 6 # in sec, default 6 min 4
@@ -40,7 +40,7 @@
 	## Uncomment to override global equivalents.
 	# update every = 1
 	# circular buffer max size = 64 # in MiB
-	circular buffer drop logs if full = no
+	# circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
 	buffer flush to db = 6 # in sec, default 6 min 4
@@ -67,7 +67,7 @@
 	## Uncomment to override global equivalents.
 	# update every = 1
 	# circular buffer max size = 64 # in MiB
-	circular buffer drop logs if full = no
+	# circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
 	buffer flush to db = 6 # in sec, default 6 min 4
@@ -104,7 +104,7 @@
 	## Uncomment to override global equivalents.
 	# update every = 1
 	# circular buffer max size = 64 # in MiB
-	circular buffer drop logs if full = no
+	# circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
 	buffer flush to db = 6 # in sec, default 6 min 4
@@ -150,7 +150,7 @@
 	## Uncomment to override global equivalents.
 	# update every = 1
 	# circular buffer max size = 64 # in MiB
-	circular buffer drop logs if full = no
+	# circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
 	buffer flush to db = 6 # in sec, default 6 min 4
@@ -193,7 +193,7 @@
 	## Uncomment to override global equivalents.
 	# update every = 1
 	# circular buffer max size = 64 # in MiB
-	circular buffer drop logs if full = no
+	# circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
 	buffer flush to db = 6 # in sec, default 6 min 4
@@ -232,7 +232,7 @@
 	## Uncomment to override global equivalents.
 	# update every = 1
 	# circular buffer max size = 64 # in MiB
-	circular buffer drop logs if full = no
+	# circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
 	buffer flush to db = 6 # in sec, default 6 min 4
@@ -277,7 +277,7 @@
 	## Uncomment to override global equivalents.
 	# update every = 1
 	# circular buffer max size = 64 # in MiB
-	circular buffer drop logs if full = no
+	# circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
 	buffer flush to db = 6 # in sec, default 6 min 4
@@ -317,7 +317,7 @@
 	## Uncomment to override global equivalents.
 	# update every = 1
 	# circular buffer max size = 64 # in MiB
-	circular buffer drop logs if full = no
+	# circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
 	buffer flush to db = 6 # in sec, default 6 min 4
@@ -356,7 +356,7 @@
 	## Uncomment to override global equivalents.
 	# update every = 1
 	# circular buffer max size = 64 # in MiB
-	circular buffer drop logs if full = no
+	# circular buffer drop logs if full = no
 	compression acceleration = 1
 	# db mode = none
 	buffer flush to db = 6 # in sec, default 6 min 4
