Add global config option for remaining optional settings

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -8,12 +8,12 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	# circular buffer max size = 64 # in MiB
+	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
-	compression acceleration = 1
+	# compression acceleration = 1
 	# db mode = none
-	buffer flush to db = 6 # in sec, default 6 min 4
-	disk space limit = 500 # in MiB, default 500MiB
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
 
 	## Charts to enable
 	severity chart = yes
@@ -39,12 +39,12 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	# circular buffer max size = 64 # in MiB
+	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
-	compression acceleration = 1
+	# compression acceleration = 1
 	# db mode = none
-	buffer flush to db = 6 # in sec, default 6 min 4
-	disk space limit = 500 # in MiB, default 500MiB
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
 
 	## Use default path to Systemd Journal
 	log path = auto
@@ -66,12 +66,12 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	# circular buffer max size = 64 # in MiB
+	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
-	compression acceleration = 1
+	# compression acceleration = 1
 	# db mode = none
-	buffer flush to db = 6 # in sec, default 6 min 4
-	disk space limit = 500 # in MiB, default 500MiB
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
 
 	## Use default Docker socket UNIX path: /var/run/docker.sock
 	log path = auto
@@ -103,12 +103,12 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	# circular buffer max size = 64 # in MiB
+	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
-	compression acceleration = 1
+	# compression acceleration = 1
 	# db mode = none
-	buffer flush to db = 6 # in sec, default 6 min 4
-	disk space limit = 500 # in MiB, default 500MiB
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
 
 	## Auto-detect default access.log, if this section's name 
 	## is "Apache access.log", otherwise it can be set manually, e.g.: 
@@ -149,12 +149,12 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	# circular buffer max size = 64 # in MiB
+	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
-	compression acceleration = 1
+	# compression acceleration = 1
 	# db mode = none
-	buffer flush to db = 6 # in sec, default 6 min 4
-	disk space limit = 500 # in MiB, default 500MiB
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
 
 	## Auto-detect default access.log, if this section's name 
 	## is [Apache access.log], otherwise it can be set manually, e.g.: 
@@ -192,12 +192,12 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	# circular buffer max size = 64 # in MiB
+	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
-	compression acceleration = 1
+	# compression acceleration = 1
 	# db mode = none
-	buffer flush to db = 6 # in sec, default 6 min 4
-	disk space limit = 500 # in MiB, default 500MiB
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
 
 	## Auto-detect default auth.log, if this section's name 
 	## is [auth.log], otherwise it can be set manually, e.g.: 
@@ -231,12 +231,12 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	# circular buffer max size = 64 # in MiB
+	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
-	compression acceleration = 1
+	# compression acceleration = 1
 	# db mode = none
-	buffer flush to db = 6 # in sec, default 6 min 4
-	disk space limit = 500 # in MiB, default 500MiB
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
 
 	## Auto-detect default syslog path, if this section's name 
 	## is [syslog] otherwise it can be set manually, e.g.: 
@@ -276,12 +276,12 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	# circular buffer max size = 64 # in MiB
+	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
-	compression acceleration = 1
+	# compression acceleration = 1
 	# db mode = none
-	buffer flush to db = 6 # in sec, default 6 min 4
-	disk space limit = 500 # in MiB, default 500MiB
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
 
 	## Netdata will create this socket if mode == unix_tcp or mode == unix_udp, 
 	## please ensure the right permissions exist for this path
@@ -316,12 +316,12 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	# circular buffer max size = 64 # in MiB
+	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
-	compression acceleration = 1
+	# compression acceleration = 1
 	# db mode = none
-	buffer flush to db = 6 # in sec, default 6 min 4
-	disk space limit = 500 # in MiB, default 500MiB
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
 
 	## Netdata will create this socket if mode == unix_tcp or mode == unix_udp, 
 	## please ensure the right permissions exist for this path
@@ -355,12 +355,12 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
-	# circular buffer max size = 64 # in MiB
+	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
-	compression acceleration = 1
+	# compression acceleration = 1
 	# db mode = none
-	buffer flush to db = 6 # in sec, default 6 min 4
-	disk space limit = 500 # in MiB, default 500MiB
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
 
 	## Set up configuration specific to flb_serial
 	log path = /dev/pts/4
