common file for defs needed by streaming and httpd

--- a/Makefile.am
+++ b/Makefile.am
@@ -637,6 +637,7 @@ STREAMING_PLUGIN_FILES = \
     streaming/replication.h \
     streaming/replication.c \
     streaming/rrdpush.h \
+    streaming/common.h \
     $(NULL)
 
 REGISTRY_PLUGIN_FILES = \
