Add Netdata error.log parsing

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -110,9 +110,10 @@
 	# circular buffer flush to db = 6
 	# disk space limit MiB = 500
 
-	## Auto-detect default access.log, if this section's name 
-	## is "Apache access.log", otherwise it can be set manually, e.g.: 
+	## This section supports auto-detection of log file path if section name
+	## is left unchanged, otherwise it can be set manually, e.g.:
 	## log path = /var/log/apache2/access.log
+	## See README for more information on 'log path = auto' option
 	log path = auto
 	
 	## Auto-detect web log format, otherwise it can be set manually, e.g.:
@@ -156,9 +157,10 @@
 	# circular buffer flush to db = 6
 	# disk space limit MiB = 500
 
-	## Auto-detect default access.log, if this section's name 
-	## is [Apache access.log], otherwise it can be set manually, e.g.: 
+	## This section supports auto-detection of log file path if section name
+	## is left unchanged, otherwise it can be set manually, e.g.:
 	## log path = /var/log/nginx/access.log
+	## See README for more information on 'log path = auto' option
 	log path = auto
 
 	## see https://docs.nginx.com/nginx/admin-guide/monitoring/logging/#setting-up-the-access-log
@@ -181,6 +183,94 @@
 	SSL protocols chart = yes
 	SSL chipher suites chart = yes
 
+[Netdata error.log]
+	## Example: Log collector that will tail Netdata's error.log and count
+	## occurences of INFO and ERROR logs 
+
+	## Required settings
+	enabled = yes
+	log type = flb_generic
+
+	## Optional settings, common to all log source. 
+	## Uncomment to override global equivalents.
+	# update every = 1
+	# circular buffer max size MiB = 64
+	# circular buffer drop logs if full = no
+	# compression acceleration = 1
+	# db mode = none
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
+
+	## This section supports auto-detection of log file path if section name
+	## is left unchanged, otherwise it can be set manually, e.g.:
+	## log path = /tmp/netdata/var/log/netdata/error.log
+	## See README for more information on 'log path = auto' option
+	log path = auto
+	
+	## Examples of extracting custom metrics from Netdata's error.log:
+
+	## log level chart
+	custom 1 chart = log level
+	custom 1 regex name = INFO
+	custom 1 regex = \ INFO\ {2}:
+	custom 1 ignore case = no
+
+	custom 2 chart = log level
+	custom 2 regex name = ERROR
+	custom 2 regex = \ ERROR\ :
+	custom 2 ignore case = no
+
+	## component chart
+	custom 3 chart = component
+	custom 3 regex name = MAIN
+	custom 3 regex = \ MAIN\ :
+	custom 3 ignore case = no
+
+	custom 4 chart = component
+	custom 4 regex name = ACLK_MAIN
+	custom 4 regex = \ ACLK_MAIN\ :
+	custom 4 ignore case = no
+
+	custom 5 chart = component
+	custom 5 regex name = ACLK_QRY[*]
+	custom 5 regex = :\ ACLK_QRY\[[0-9]{1,2}\]\ :
+	custom 5 ignore case = no
+
+	custom 6 chart = component
+	custom 6 regex name = WEB[*]
+	custom 6 regex = :\ WEB\[[0-9]{1,2}\]\ :
+	custom 6 ignore case = no
+
+	custom 7 chart = component
+	custom 7 regex name = EXPORTING
+	custom 7 regex = \ EXPORTING\ :
+	custom 7 ignore case = no
+
+	custom 8 chart = component
+	custom 8 regex name = DBENGINE_INIT
+	custom 8 regex = \ DBENGINE_INIT\ :
+	custom 8 ignore case = no
+
+	custom 9 chart = component
+	custom 9 regex name = STATSD_IN[*]
+	custom 9 regex = \ STATSD_IN\[[0-9]{1,2}\]\ :
+	custom 9 ignore case = no
+
+	custom 10 chart = component
+	custom 10 regex name = HEALTH
+	custom 10 regex = \ HEALTH\[[0-9]{1,2}\]\ :
+	custom 10 ignore case = no
+
+	custom 11 chart = component
+	custom 11 regex name = PLUGINS_D
+	custom 11 regex = (\ PD\[.+\]\ :)|(\ PLUGINSD\ :)
+	custom 11 ignore case = no
+
+	custom 12 chart = component
+	custom 12 regex name = PLUGINS
+	custom 12 regex = \ P\[.+\]\ :
+	custom 12 ignore case = no
+
 [auth.log tail]
 	## Example: Log collector that will tail auth.log file and count 
 	## occurences of certain `sudo` commands, using POSIX regular expressions.
@@ -199,9 +289,10 @@
 	# circular buffer flush to db = 6
 	# disk space limit MiB = 500
 
-	## Auto-detect default auth.log, if this section's name 
-	## is [auth.log], otherwise it can be set manually, e.g.: 
+	## This section supports auto-detection of log file path if section name
+	## is left unchanged, otherwise it can be set manually, e.g.:
 	## log path = /var/log/auth.log
+	## See README for more information on 'log path = auto' option
 	log path = auto
 	
 	## Examples of extracting custom metrics from auth.log:
@@ -238,10 +329,11 @@
 	# circular buffer flush to db = 6
 	# disk space limit MiB = 500
 
-	## Auto-detect default syslog path, if this section's name 
-	## is [syslog] otherwise it can be set manually, e.g.: 
+	## This section supports auto-detection of log file path if section name
+	## is left unchanged, otherwise it can be set manually, e.g.:
 	## log path = /var/log/syslog
 	## log path = /var/log/messages
+	## See README for more information on 'log path = auto' option
 	log path = auto
 	
 	## Examples of extracting custom metrics from syslog:
