--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -417,7 +417,7 @@
 
 	## Netdata will create this socket if mode == unix_tcp or mode == unix_udp, 
 	## please ensure the right permissions exist for this path
-	log path = /tmp/netdata-syslog.sock
+	# log path = /tmp/netdata-syslog.sock
 
 	## Ruby Regular Expression to define expected syslog format
 	## Please make sure <PRIVAL>, <SYSLOG_TIMESTAMP>, <HOSTNAME>, <SYSLOG_IDENTIFIER>, <PID> and <MESSAGE> are defined
