--- a/health/health.d/btrfs.conf
+++ b/health/health.d/btrfs.conf
@@ -67,8 +67,8 @@ component: File system
      info: utilization of BTRFS system space
        to: sysadmin
 
- template: btrfs_errors
-       on: btrfs.errors
+ template: btrfs_device_read_errors
+       on: btrfs.device_errors
     class: Errors
      type: System
 component: File system
@@ -76,14 +76,14 @@ component: File system
     hosts: *
  families: *
     units: errors
-   lookup: max -10m every 1m foreach *:read_errs
+   lookup: max -10m every 1m of read_errs
      warn: $this > 0
     delay: up 1m down 15m multiplier 1.5 max 1h
      info: number of encountered BTRFS read errors
        to: sysadmin
 
- template: btrfs_errors
-       on: btrfs.errors
+ template: btrfs_device_write_errors
+       on: btrfs.device_errors
     class: Errors
      type: System
 component: File system
@@ -91,14 +91,14 @@ component: File system
     hosts: *
  families: *
     units: errors
-   lookup: max -10m every 1m foreach *:write_errs
+   lookup: max -10m every 1m of write_errs
      warn: $this > 0
     delay: up 1m down 15m multiplier 1.5 max 1h
      info: number of encountered BTRFS write errors
        to: sysadmin
 
- template: btrfs_errors
-       on: btrfs.errors
+ template: btrfs_device_flush_errors
+       on: btrfs.device_errors
     class: Errors
      type: System
 component: File system
@@ -106,14 +106,14 @@ component: File system
     hosts: *
  families: *
     units: errors
-   lookup: max -10m every 1m foreach *:flush_errs
+   lookup: max -10m every 1m of flush_errs
      warn: $this > 0
     delay: up 1m down 15m multiplier 1.5 max 1h
      info: number of encountered BTRFS flush errors
        to: sysadmin
 
- template: btrfs_errors
-       on: btrfs.errors
+ template: btrfs_device_corruption_errors
+       on: btrfs.device_errors
     class: Errors
      type: System
 component: File system
@@ -121,14 +121,14 @@ component: File system
     hosts: *
  families: *
     units: errors
-   lookup: max -10m every 1m foreach *:corruption_errs
+   lookup: max -10m every 1m of corruption_errs
      warn: $this > 0
     delay: up 1m down 15m multiplier 1.5 max 1h
      info: number of encountered BTRFS corruption errors
        to: sysadmin
 
- template: btrfs_errors
-       on: btrfs.errors
+ template: btrfs_device_generation_errors
+       on: btrfs.device_errors
     class: Errors
      type: System
 component: File system
@@ -136,7 +136,7 @@ component: File system
     hosts: *
  families: *
     units: errors
-   lookup: max -10m every 1m foreach *:generation_errs
+   lookup: max -10m every 1m of generation_errs
      warn: $this > 0
     delay: up 1m down 15m multiplier 1.5 max 1h
      info: number of encountered BTRFS generation errors
