--- a/netdata.spec.in
+++ b/netdata.spec.in
@@ -40,8 +40,8 @@ AutoReqProv: yes
 # Redefine centos_ver to standardize on a single macro
 %{?rhel:%global centos_ver %rhel}
 
-# Disable FreeIPMI on Amazon Linux
-%if 0%{?amzn}
+# Disable FreeIPMI on Amazon Linux 2023 and newer
+%if 0%{?amzn} >= 2023
 %global _have_freeipmi 0
 %else
 %global _have_freeipmi 1
