initial webrtc setup

--- a/Makefile.am
+++ b/Makefile.am
@@ -659,6 +659,8 @@ STATSD_PLUGIN_FILES = \
     $(NULL)
 
 WEB_PLUGIN_FILES = \
+    web/rtc/webrtc.cpp \
+    web/rtc/webrtc.h \
     web/server/web_client.c \
     web/server/web_client.h \
     web/server/web_server.c \
