--- a/health/notifications/health_alarm_notify.conf
+++ b/health/notifications/health_alarm_notify.conf
@@ -856,8 +856,14 @@ DEFAULT_RECIPIENT_MATRIX=""
 
 #------------------------------------------------------------------------------
 # ntfy.sh global notification options
+
+# enable/disable sending ntfy notifications
 SEND_NTFY="YES"
 
+# if a role's recipients are not configured, a notification will be sent to
+# this ntfy server / topic combination (empty = do not send a notification for 
+# unconfigured roles). 
+# Multiple recipients can be given like this: "https://SERVER1/TOPIC1 https://SERVER2/TOPIC2 ..."
 DEFAULT_RECIPIENT_NTFY=""
 
 #------------------------------------------------------------------------------
